tests/ui/parser/f16-f128.stderr
error[E0412]: cannot find type `f16` in this scope
  --> $DIR/f16-f128.rs:4:14
   |
LL |     const A: f16 = 10.0;
   |              ^^^ help: a builtin type with a similar name exists: `i16`

error[E0412]: cannot find type `f16` in this scope
  --> $DIR/f16-f128.rs:7:16
   |
LL |         let a: f16 = 100.0;
   |                ^^^ help: a builtin type with a similar name exists: `i16`

error[E0412]: cannot find type `f16` in this scope
  --> $DIR/f16-f128.rs:13:15
   |
LL |     fn foo(a: f16) {}
   |               ^^^ help: a builtin type with a similar name exists: `i16`

error[E0412]: cannot find type `f16` in this scope
  --> $DIR/f16-f128.rs:16:12
   |
LL |         a: f16,
   |            ^^^ help: a builtin type with a similar name exists: `i16`

error[E0412]: cannot find type `f128` in this scope
  --> $DIR/f16-f128.rs:21:14
   |
LL |     const A: f128 = 10.0;
   |              ^^^^ help: a builtin type with a similar name exists: `i128`

error[E0412]: cannot find type `f128` in this scope
  --> $DIR/f16-f128.rs:24:16
   |
LL |         let a: f128 = 100.0;
   |                ^^^^ help: a builtin type with a similar name exists: `i128`

error[E0412]: cannot find type `f128` in this scope
  --> $DIR/f16-f128.rs:30:15
   |
LL |     fn foo(a: f128) {}
   |               ^^^^ help: a builtin type with a similar name exists: `i128`

error[E0412]: cannot find type `f128` in this scope
  --> $DIR/f16-f128.rs:33:12
   |
LL |         a: f128,
   |            ^^^^ help: a builtin type with a similar name exists: `i128`

error: invalid width `16` for float literal
  --> $DIR/f16-f128.rs:8:17
   |
LL |         let b = 0.0f16;
   |                 ^^^^^^
   |
   = help: valid widths are 32 and 64

error: invalid width `128` for float literal
  --> $DIR/f16-f128.rs:25:17
   |
LL |         let b = 0.0f128;
   |                 ^^^^^^^
   |
   = help: valid widths are 32 and 64

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0412`.
